# ogre

./: .local-ci.toml  Cargo.toml  PLAN.md  README.md  TEAM_SUMMARY.md
.githooks/: pre-commit
.github/workflows/: ci.yml  local-ci.yml
assessments/: PHASE1_OXIDIZEDRAG_ASSESSMENT.md  PHASE2_GAP_CODE_SPECIFIC_RETRIEVAL.md
crates/ogre-core/: Cargo.toml
crates/ogre-core/src/: agent_lifecycle.rs  checkpoint.rs  error.rs  lib.rs  safety_gates.rs  workflow_executor.rs
docs/: CI_CD_SETUP.md  PHASE_1_ASSESSMENT.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_ISSUE_23_OXIDIZEDRAG.md  PHASE_1_ISSUE_24_OXIDIZEDGRAPH.md  PHASE_1_ISSUE_25_DATAFABRIC.md  PHASE_1_ISSUE_26_CONTRACTS.md
