[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["stevedores-org"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
